--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
-    "seed:courses": "node seedCourses.js"
+    "test": "jest"
   },
   "dependencies": {
     "@logtail/node": "^0.5.5",
